--- a/CasterSoundboard/qml.qrc
+++ b/CasterSoundboard/qml.qrc
@@ -1,5 +1,42 @@
 <RCC>
     <qresource prefix="/">
-        <file>main.qml</file>
+        <file>qml/views/mainView.qml</file>
+        <file>qml/icons/33_percent.png</file>
+        <file>qml/icons/about.png</file>
+        <file>qml/icons/app.png</file>
+        <file>qml/icons/cog.png</file>
+        <file>qml/icons/colorPicker.png</file>
+        <file>qml/icons/cue.png</file>
+        <file>qml/icons/down.png</file>
+        <file>qml/icons/duck.png</file>
+        <file>qml/icons/Key.png</file>
+        <file>qml/icons/loop.png</file>
+        <file>qml/icons/newTab.png</file>
+        <file>qml/icons/no_loop.png</file>
+        <file>qml/icons/notes.png</file>
+        <file>qml/icons/open_sound_control.png</file>
+        <file>qml/icons/open.png</file>
+        <file>qml/icons/openMusic.png</file>
+        <file>qml/icons/pause.png</file>
+        <file>qml/icons/play.png</file>
+        <file>qml/icons/playState_paused.png</file>
+        <file>qml/icons/playState_playing.png</file>
+        <file>qml/icons/playState_stopped.png</file>
+        <file>qml/icons/rename.png</file>
+        <file>qml/icons/save_as.png</file>
+        <file>qml/icons/save.png</file>
+        <file>qml/icons/stop.png</file>
+        <file>qml/icons/stopAll.png</file>
+        <file>qml/icons/unduck.png</file>
+        <file>qml/views/Button_MainSideNav.qml</file>
+        <file>qml/views/Soundboard.qml</file>
+        <file>qml/views/Button_SoundboardsContainer_MenuBar.qml</file>
+        <file>qml/icons/fullscreen.png</file>
+        <file>qml/icons/exit_fullscreen.png</file>
+        <file>qml/views/Player.qml</file>
+        <file>qml/icons/soundboard_tab.png</file>
+        <file>qml/views/Button_Player.qml</file>
+        <file>qml/views/ProgressSlider_Player.qml</file>
+        <file>qml/views/VolumeSlider_Player.qml</file>
     </qresource>
 </RCC>
