--- a/CasterSoundboard/qml.qrc
+++ b/CasterSoundboard/qml.qrc
@@ -29,14 +29,20 @@
         <file>qml/icons/stopAll.png</file>
         <file>qml/icons/unduck.png</file>
         <file>qml/views/Button_MainSideNav.qml</file>
-        <file>qml/views/Soundboard.qml</file>
         <file>qml/views/Button_SoundboardsContainer_MenuBar.qml</file>
         <file>qml/icons/fullscreen.png</file>
         <file>qml/icons/exit_fullscreen.png</file>
-        <file>qml/views/Player.qml</file>
         <file>qml/icons/soundboard_tab.png</file>
-        <file>qml/views/Button_Player.qml</file>
-        <file>qml/views/ProgressSlider_Player.qml</file>
-        <file>qml/views/VolumeSlider_Player.qml</file>
+        <file>qml/img/player_gradient.png</file>
+        <file>qml/views/components/caster_player/Component.qml</file>
+        <file>qml/views/components/caster_player/subcomponents/Button.qml</file>
+        <file>qml/views/components/caster_player/subcomponents/HotkeyIndicator.qml</file>
+        <file>qml/views/components/caster_player/subcomponents/ProgressBar.qml</file>
+        <file>qml/views/components/caster_player/subcomponents/TrackTitle.qml</file>
+        <file>qml/views/components/caster_player/subcomponents/VolumeSlider.qml</file>
+        <file>qml/views/components/caster_board/Component.qml</file>
+        <file>qml/icons/add_player.png</file>
+        <file>qml/views/components/caster_player/subcomponents/AddPlayer.qml</file>
+        <file>qml/img/player_outline.png</file>
     </qresource>
 </RCC>
